# droidimg

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac
as_plugin/droidimg/: build.gradle.kts  settings.gradle.kts
doc/html/: android__utils_8c.html  android__utils_8c.js  android__utils_8h.html  android__utils_8h.js  android__utils_8h_source.html  annotated.html  annotated_dup.js  binary__utils_8c.html  binary__utils_8c.js  binary__utils_8h.html  binary__utils_8h.js  binary__utils_8h_source.html  classes.html  commons_8c.html  commons_8c.js  commons_8h.html  commons_8h.js  commons_8h_source.html  config__utils_8c.html  config__utils_8c.js  config__utils_8h.html  config__utils_8h.js  config__utils_8h_source.html  constants_8h.html  constants_8h.js  constants_8h_source.html  dir_251697ed71d3107a084c4be76de6bea7.html  dir_251697ed71d3107a084c4be76de6bea7.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b3320b59a4aa4a7431bc8488b87009bf.html  dir_b3320b59a4aa4a7431bc8488b87009bf.js  dir_e35f84834a5a87e6c96f50fa87172572.html  dir_e35f84834a5a87e6c96f50fa87172572.js  droidimg_8c.html  droidimg_8c.js  errors_8c.html  errors_8c.js  (+63 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  (+31 more)
program/droidimg/: compile-cygwin-i686.sh  compile-cygwin-x86_64.sh  compile.sh  droidimg.c
program/droidimg/utils/: android_utils.c  binary_utils.h  config_utils.c  config_utils.h  memory_utils.c  picture_utils.c  string_utils.h  webp_utils.c  webp_utils.h
src/: Makefile.am  compile-cygwin-i686.sh  compile.sh  droidimg.c
src/android/: drawables.c  drawables.h
src/config/: reader.c  reader.h
src/errors/: errors.c  errors.h
src/files/: commons.c  commons.h  reader.c  reader.h  writer.c  writer.h
src/logging/: logging.c  logging.h
src/pictures/: pictures.c  pictures.h
src/png/: reader.c  reader.h
src/utils/: android_utils.c  android_utils.h  binary_utils.c  config_utils.c  constants.h  memory_utils.c  memory_utils.h  picture_utils.h  png_utils.c  png_utils.h  string_utils.c  string_utils.h  webp_utils.c
src/webp/: reader.c  reader.h  writer.c  writer.h
tests/: Makefile.am
tests/app_tests/: Makefile.am  convert_png_to_android.sh
tests/errors/: .gitignore  Makefile.am  errors_add_after_initialized.c  errors_add_before_initialized.c  errors_add_before_initialized.sh  errors_add_two_remove_one_add_one_print.c  errors_add_two_remove_one_add_one_print.sh  errors_free_after_initialized.c  errors_free_before_initialized.c  errors_free_before_initialized.sh  errors_print_no_message.c  errors_print_no_message.sh  errors_print_two_messages.c  errors_print_two_messages.sh  errors_remove_before_initialized.c  errors_remove_before_initialized.sh  errors_remove_from_empty.c  errors_remove_from_empty.sh  errors_remove_two_from_one.c  errors_remove_two_from_one.sh  errors_remove_two_from_two.c
tests/files/: .gitignore  Makefile.am  files_read_empty_content.c  files_read_empty_content_after.sh  files_read_empty_content_before.sh  files_read_no_permission.c  files_read_no_permission.sh  files_read_no_permission_before.sh  files_read_not_existing.c  files_read_not_existing.sh  files_write_no_permission.c  files_write_no_permission.sh  files_write_no_permission_before.sh  files_write_no_permission_directory.sh  files_write_no_permission_directory_before.sh
tests/logging/: .gitignore  Makefile.am  logging_level.c  logging_level.sh
tests/pictures/: .gitignore  Makefile.am  pictures_resize.c
tests/pictures/pictures/: droidbot_846x477.picture
tests/png/: .gitignore  Makefile.am  convert_png_file_to_picture.c
tests/webp/: .gitignore  Makefile.am  convert_webp_file_to_picture.c
tests/webp/img/: droidbot.picture
