bin_PROGRAMS = droidimg
droidimg_SOURCES := utils/android_utils.c
droidimg_SOURCES += utils/android_utils.h
droidimg_SOURCES += utils/binary_utils.c
droidimg_SOURCES += utils/binary_utils.h
droidimg_SOURCES += utils/config_utils.c
droidimg_SOURCES += utils/config_utils.h
droidimg_SOURCES += utils/constants.h
droidimg_SOURCES += utils/memory_utils.c
droidimg_SOURCES += utils/memory_utils.h
droidimg_SOURCES += utils/picture_utils.c
droidimg_SOURCES += utils/picture_utils.h
droidimg_SOURCES += utils/png_utils.c
droidimg_SOURCES += utils/png_utils.h
droidimg_SOURCES += utils/string_utils.c
droidimg_SOURCES += utils/string_utils.h
droidimg_SOURCES += utils/webp_utils.c
droidimg_SOURCES += utils/webp_utils.h
droidimg_SOURCES += droidimg.c