bin_PROGRAMS = droidimg
droidimg_SOURCES = utils/android_utils.c
droidimg_SOURCES += utils/android_utils.h
droidimg_SOURCES += utils/binary_utils.c
droidimg_SOURCES += utils/binary_utils.h
droidimg_SOURCES += utils/config_utils.c
droidimg_SOURCES += utils/config_utils.h
droidimg_SOURCES += utils/constants.h
droidimg_SOURCES += utils/memory_utils.c
droidimg_SOURCES += utils/memory_utils.h
droidimg_SOURCES += pictures/pictures.c
droidimg_SOURCES += pictures/pictures.h
droidimg_SOURCES += utils/png_utils.c
droidimg_SOURCES += utils/png_utils.h
droidimg_SOURCES += utils/string_utils.c
droidimg_SOURCES += utils/string_utils.h
droidimg_SOURCES += utils/webp_utils.c
droidimg_SOURCES += utils/webp_utils.h
droidimg_SOURCES += errors/errors.c
droidimg_SOURCES += errors/errors.h
droidimg_SOURCES += files/commons.c
droidimg_SOURCES += files/commons.h
droidimg_SOURCES += files/reader.c
droidimg_SOURCES += files/reader.h
droidimg_SOURCES += logging/logging.c
droidimg_SOURCES += logging/logging.h
droidimg_SOURCES += droidimg.c