bin_PROGRAMS = droidimg
droidimg_SOURCES = utils/config_utils.c
droidimg_SOURCES += utils/config_utils.h
droidimg_SOURCES += files/writer.c
droidimg_SOURCES += files/writer.h
droidimg_SOURCES += android/drawables.c
droidimg_SOURCES += android/drawables.h
droidimg_SOURCES += pictures/pictures.c
droidimg_SOURCES += pictures/pictures.h
droidimg_SOURCES += png/reader.h
droidimg_SOURCES += png/reader.c
droidimg_SOURCES += webp/reader.h
droidimg_SOURCES += webp/reader.c
droidimg_SOURCES += webp/writer.h
droidimg_SOURCES += webp/writer.c
droidimg_SOURCES += files/commons.c
droidimg_SOURCES += files/commons.h
droidimg_SOURCES += files/reader.c
droidimg_SOURCES += files/reader.h
droidimg_SOURCES += logging/logging.c
droidimg_SOURCES += logging/logging.h
droidimg_SOURCES += droidimg.c