TESTS = errors_add_before_initialized
TESTS += errors_add_before_initialized.sh
TESTS += errors_add_after_initialized
TESTS += errors_free_before_initialized
TESTS += errors_free_before_initialized.sh
TESTS += errors_free_after_initialized
TESTS += errors_remove_before_initialized
TESTS += errors_remove_before_initialized.sh
TESTS += errors_remove_from_empty
TESTS += errors_remove_from_empty.sh
TESTS += errors_remove_two_from_one
TESTS += errors_remove_two_from_one.sh
TESTS += errors_remove_two_from_two
TESTS += errors_print_two_messages
TESTS += errors_print_two_messages.sh
TESTS += errors_print_no_message
TESTS += errors_print_no_message.sh
TESTS += errors_add_two_remove_one_add_one_print
TESTS += errors_add_two_remove_one_add_one_print.sh

XFAIL_TESTS = errors_add_before_initialized
XFAIL_TESTS += errors_free_before_initialized
XFAIL_TESTS += errors_remove_before_initialized
XFAIL_TESTS += errors_remove_from_empty
XFAIL_TESTS += errors_remove_two_from_one

check_PROGRAMS = errors_add_before_initialized
check_PROGRAMS += errors_add_after_initialized
check_PROGRAMS += errors_free_before_initialized
check_PROGRAMS += errors_free_after_initialized
check_PROGRAMS += errors_remove_before_initialized
check_PROGRAMS += errors_remove_from_empty
check_PROGRAMS += errors_remove_two_from_one
check_PROGRAMS += errors_remove_two_from_two
check_PROGRAMS += errors_print_two_messages
check_PROGRAMS += errors_print_no_message
check_PROGRAMS += errors_add_two_remove_one_add_one_print

errors_add_before_initialized_SOURCES = errors_add_before_initialized.c
errors_add_before_initialized_SOURCES += ${SRCDIR}/errors/errors.c
errors_add_before_initialized_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_add_before_initialized_SOURCES += ${SRCDIR}/logging/logging.c

errors_add_after_initialized_SOURCES = errors_add_after_initialized.c
errors_add_after_initialized_SOURCES += ${SRCDIR}/errors/errors.c
errors_add_after_initialized_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_add_after_initialized_SOURCES += ${SRCDIR}/logging/logging.c

errors_free_before_initialized_SOURCES = errors_free_before_initialized.c
errors_free_before_initialized_SOURCES += ${SRCDIR}/errors/errors.c
errors_free_before_initialized_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_free_before_initialized_SOURCES += ${SRCDIR}/logging/logging.c

errors_free_after_initialized_SOURCES = errors_free_after_initialized.c
errors_free_after_initialized_SOURCES += ${SRCDIR}/errors/errors.c
errors_free_after_initialized_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_free_after_initialized_SOURCES += ${SRCDIR}/logging/logging.c

errors_remove_before_initialized_SOURCES = errors_remove_before_initialized.c
errors_remove_before_initialized_SOURCES += ${SRCDIR}/errors/errors.c
errors_remove_before_initialized_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_remove_before_initialized_SOURCES += ${SRCDIR}/logging/logging.c

errors_remove_from_empty_SOURCES = errors_remove_from_empty.c
errors_remove_from_empty_SOURCES += ${SRCDIR}/errors/errors.c
errors_remove_from_empty_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_remove_from_empty_SOURCES += ${SRCDIR}/logging/logging.c

errors_remove_two_from_one_SOURCES = errors_remove_two_from_one.c
errors_remove_two_from_one_SOURCES += ${SRCDIR}/errors/errors.c
errors_remove_two_from_one_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_remove_two_from_one_SOURCES += ${SRCDIR}/logging/logging.c

errors_remove_two_from_two_SOURCES = errors_remove_two_from_two.c
errors_remove_two_from_two_SOURCES += ${SRCDIR}/errors/errors.c
errors_remove_two_from_two_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_remove_two_from_two_SOURCES += ${SRCDIR}/logging/logging.c

errors_print_two_messages_SOURCES = errors_print_two_messages.c
errors_print_two_messages_SOURCES += ${SRCDIR}/errors/errors.c
errors_print_two_messages_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_print_two_messages_SOURCES += ${SRCDIR}/logging/logging.c

errors_print_no_message_SOURCES = errors_print_no_message.c
errors_print_no_message_SOURCES += ${SRCDIR}/errors/errors.c
errors_print_no_message_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_print_no_message_SOURCES += ${SRCDIR}/logging/logging.c

errors_add_two_remove_one_add_one_print_SOURCES = errors_add_two_remove_one_add_one_print.c
errors_add_two_remove_one_add_one_print_SOURCES += ${SRCDIR}/errors/errors.c
errors_add_two_remove_one_add_one_print_SOURCES += ${SRCDIR}/utils/string_utils.c
errors_add_two_remove_one_add_one_print_SOURCES += ${SRCDIR}/logging/logging.c
