TESTS = pictures_resize

check_PROGRAMS = pictures_resize

pictures_resize_SOURCES = pictures_resize.c
pictures_resize_SOURCES += ${SRCDIR}/pictures/pictures.c
pictures_resize_SOURCES += ${SRCDIR}/errors/errors.c
pictures_resize_SOURCES += ${SRCDIR}/utils/string_utils.c
pictures_resize_SOURCES += ${SRCDIR}/logging/logging.c
pictures_resize_SOURCES += ${SRCDIR}/files/commons.c
pictures_resize_SOURCES += ${SRCDIR}/files/reader.c