TESTS = convert_webp_file_to_picture

check_PROGRAMS = convert_webp_file_to_picture

convert_webp_file_to_picture_SOURCES = convert_webp_file_to_picture.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/pictures/pictures.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/errors/errors.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/utils/string_utils.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/logging/logging.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/files/commons.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/files/reader.c
convert_webp_file_to_picture_SOURCES += ${SRCDIR}/webp/reader.c